# cy_serial_bridge

./: .gitignore  CHANGELOG.md  Development Setup.md  README.md  mypy.ini  py.typed  pyproject.toml
.github/workflows/: github_release.yml  linting_and_formatting.yml  pypi_deploy.yml  ruff.yml
cy_serial_bridge/: __init__.py  cli.py  configuration_block.py  driver.py  usb_constants.py  utils.py
rules/: 61-cy-serial-bridge.rules
src/cy_serial_bridge/: __init__.py  cli.py  configuration_block.py  cy_scb_context.py  device_discovery.py  driver.py  flash.py  usb_constants.py  utils.py
tests/: test_driver.py
